Correct z-index of header__information

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -55,6 +55,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+  z-index: 2;
 }
 
 .header__hours {
